# league-snowflake-item-browser

./: README.md  environment.yml  pyproject.toml  settings.py  snowflake.yml  src_data.py  src_query.py  src_stats.py  src_theme.py  src_ui.py  streamlit_app.py
.streamlit/: config.toml
assets/sample_data/: sf_champion_overview.csv  sf_item_stats_and_recommendations.csv
src/: data.py  mock.py  query.py  stats.py  theme.py  ui.py
src/ui/: __init__.py  components.py  item_builds.py  recommendations.py  theme.py
