[project]
name = "item-browser"
version = "0.1.0"
description = "Itemization explorer for the league-snowflake medallion pipeline: item stats, recommendations, and gem/trap signal detection."
requires-python = "~=3.11.0"
dependencies = [
    "streamlit[snowflake]",
    "pandas",
    "numpy",
]

[tool.uv]
exclude-newer = "7 days"
