[project]
name = "item-browser"
version = "0.1.0"
description = "Itemization explorer for the league-snowflake medallion pipeline: item stats, recommendations, and gem/trap signal detection."
requires-python = "~=3.11.0"
dependencies = [
    "streamlit[snowflake]",
    "pydantic>=2.0",
    "pandas",
    "numpy",
]

[tool.uv]
constraint-dependencies = ["numba>=0.56.0"]
exclude-newer = "2026-07-03T00:00:00Z"

[tool.uv.exclude-newer-package]
streamlit = false