[project]
name = "item-browser"
version = "0.1.0"
description = "Itemization explorer for the league-snowflake medallion pipeline: item stats, recommendations, and gem/trap signal detection."
requires-python = "~=3.11.0"
dependencies = [
    "streamlit[snowflake]",
    "pydantic>=2.0",
    "pandas",
    "numpy",
]

[tool.uv]
constraint-dependencies = ["numba>=0.56.0"]
exclude-newer = "7 days"

[tool.uv.exclude-newer-package]
streamlit = false